Updates for WRAP 2016

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # pass
 # Site settings
-title: "WRAp: Workshop on Representative Applications"
+title: "Workshop on Representative Applications"
 email: wrap-organizers@lists.llnl.gov
 description: > # this means to ignore newlines until "baseurl:"
-  Website for the first Workshop on Representative Applications.
+  Website for the second Workshop on Representative Applications.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://wrap-workshop.github.io" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
